examples/invalid/counter.ccs
X:=up.(X|down.0);

X

